k8s/base/resources/microservice.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-http-routing
spec:
  rules:
    - host: api.local
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: apiv1
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: apiv2
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mariadb:10.4.15
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: db-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-persistent-storage
          persistentVolumeClaim:
            claimName: db-persistent-storage
